terraform6/ecs.tf
resource "aws_ecs_cluster" "strapi_cluster" {
  name = "strapi-cluster"

  setting {
    name  = "containerInsights"
    value = "enabled"
  }
}

resource "aws_ecs_task_definition" "strapi_task" {
  family                   = "strapi-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([{
    name  = "strapi"
    image = var.image_uri
    portMappings = [{
      containerPort = 1337
      protocol      = "tcp"
    }]
    logConfiguration = {
      logDriver = "awslogs"
      options = {
        awslogs-group         = "/ecs/strapi"
        awslogs-region        = "us-east-1"
        awslogs-stream-prefix = "ecs/strapi"
      }
    }
  }])
}

resource "aws_ecs_service" "strapi_service" {
  name            = "strapi-service"
  cluster         = aws_ecs_cluster.strapi_cluster.id
  task_definition = aws_ecs_task_definition.strapi_task.arn
  desired_count   = 1
  # launch_type     = "FARGATE"
  capacity_provider_strategy {
    capacity_provider = "FARGATE_SPOT"
    weight            = 1
  }

  network_configuration {
    subnets         = [aws_subnet.subnet-1.id, aws_subnet.subnet-2.id]
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.strapi_tg.arn
    container_name   = "strapi"
    container_port   = 1337
  }

  depends_on = [aws_lb_listener.listener]
}


# ----------------------------------------------------------
                    # OLD VERSION
# This file contains the configuration for deploying Strapi on AWS ECS using Fargate.     

# resource "aws_ecs_cluster" "strapi_cluster" {
#   name = "strapi-cluster"
# }

# resource "aws_ecs_task_definition" "strapi_task" {
#   family                   = "strapi-task"
#   network_mode             = "awsvpc"
#   requires_compatibilities = ["FARGATE"]
#   cpu                      = "512"
#   memory                   = "1024"
#   execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

#   container_definitions = jsonencode([
#     {
#       name  = "strapi"
#       image = var.image_uri
#       portMappings = [{
#         containerPort = 1337
#         protocol      = "tcp"
#       }]
#     }
#   ])
# }

# resource "aws_ecs_service" "strapi_service" {
#   name            = "strapi-service"
#   cluster         = aws_ecs_cluster.strapi_cluster.id
#   task_definition = aws_ecs_task_definition.strapi_task.arn
#   desired_count   = 1
#   launch_type     = "FARGATE"

#   network_configuration {
#     subnets         = [aws_subnet.subnet-1.id, aws_subnet.subnet-2.id]
#     security_groups = [aws_security_group.ecs_sg.id]
#     assign_public_ip = true
#   }

#   load_balancer {
#     target_group_arn = aws_lb_target_group.strapi_tg.arn
#     container_name   = "strapi"
#     container_port   = 1337
#   }

#   depends_on = [aws_lb_listener.listener]
# }
